--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -15,89 +15,14 @@
   align-items: stretch;
 }
 
-
-// BUTTON
-.btn {
-  border-radius: 0px;
-  background-color: #2196F3;
-  color: #fff;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.btn:hover {
-  border-radius: 0px;
-  background-color: rgb(0, 45, 82);
-  color: #fff;
-}
-
-.btn:active {
-  border-radius: 0px;
-  background-color: #2196F3;
-  color: #fff;
-}
-
-.btn:focus {
-  border-radius: 0px;
-  background-color: #2196F3;
-  color: #fff;
-}
-
-
-.btn .activated {
-  border-radius: 0px;
-  background-color: #2196F3;
-  color: #fff;
-}
-
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  background-color: rgb(0, 45, 82);
-}
-
-
-.btn.btn-primary:hover {
-  border-radius: 0px;
-  background-color: rgb(0, 45, 82);
-  color: #fff;
-}
-
-// .btn.btn-primary:active:hover {
-//   border-radius: 0px;
-//   background-color: #2196F3;
-//   color: #fff;
-// }
-
-.btn.btn-primary.active:hover {
-  border-radius: 0px;
-  background-color: rgb(0, 45, 82);
-  color: #fff;
-}
-
-.btn.btn-primary.active:focus {
-  border-radius: 0px;
-  background-color: rgb(0, 45, 82);
-  color: #fff;
-}
-
-
-.mat-button {
-  min-width: 1%;
-}
-
-.sidebar-button {
-  border-radius: 0px;
-
-}
-
-
 // SIDEBAR
 #sidebar {
-  min-width: 70px;
-  max-width: 70px;
+  min-width: 64px;
+  max-width: 64px;
   color: #fff;
   background: #2196F3;
   transition: all 0.3s;
-  overflow: hidden;
+  // overflow: hidden;
   transition: all 0.3s;
 }
 
@@ -107,38 +32,11 @@
   transition: all 0.3s;
 }
 
-// SIDEBAR BUTTON
-#sidebar .sidebar-button {
-  min-height: 70px;
-  max-height: 70px;
-  min-width: 70px;
-  max-width: 70px;
-  transition: all 0.3s;
-}
-
-#sidebar.expanded .sidebar-button {
-  min-width: 250px;
-  max-width: 250px;
-  transition: all 0.3s;
-}
-
-#sidebar ul li .sidebar-button {
-  min-width: 70px;
-  max-width: 70px;
-  transition: all 0.3s;
-}
-
-#sidebar.expanded ul li .sidebar-button {
-  min-width: 250px;
-  max-width: 250px;
-  transition: all 0.3s;
-}
-
 // SIDEBAR LIST
 #sidebar ul li {
   display: block;
-  min-width: 70px;
-  max-width: 70px;
+  min-width: 64px;
+  max-width: 64px;
   transition: all 0.3s;
 }
 
@@ -148,75 +46,66 @@
   transition: all 0.3s;
 }
 
-// SIDEBAR BUTTON CONTAINER
-#sidebar .sidebar-button-container {
-  padding-left: 0px;
-
+#sidebar ul li a .btn-text{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+  font-style: normal;
 }
 
-#sidebar.expanded .sidebar-button-container {
-
+#sidebar.expanded ul li a .btn-text {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
 }
 
-// SIDEBAR BUTTON ROW
-#sidebar .sidebar-button-row {
-  padding-left: 0px;
-  min-width: 70px;
-  max-width: 70px;
+// BUTTON
+#sidebar .btn {
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  margin-left: 0px;
+
+  min-height: 64px;
+  max-height: 64px;
+  min-width: 64px;
+  max-width: 64px;
   transition: all 0.3s;
 }
 
-#sidebar.expanded .sidebar-button-row {
+#sidebar.expanded .btn {
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  margin-left: 0px;
+
+  min-height: 64px;
+  max-height: 64px;
   min-width: 250px;
   max-width: 250px;
   transition: all 0.3s;
 }
 
-// SIDEBAR ICON COL
-#sidebar .sidebar-icon-col {
-  padding: 0px;
-  min-width: 70px;
-  max-width: 70px;
-  transition: all 0.3s;
-}
+// // TEXT
+// #sidebar .btn .btn-text{
+//   display: none;
+//   visibility: hidden;
+//   transition: all 0.3s;
+//   text-decoration: none;
+// }
 
-#sidebar.expanded .sidebar-icon-col {
-  transition: all 0.3s;
-}
+// #sidebar.expanded .btn .btn-text{
+//   display: inline;
+//   visibility: visible;
+//   transition-delay: display 1.0s;
+//   transition: all 0.3s;
+// }
 
-// SIDEBAR TEXT COL
-#sidebar .sidebar-text-col {
-  transition: all 0.3s;
-}
-
-#sidebar.expanded .sidebar-text-col {
-  transition: all 0.3s;
-}
-
-// SIDEBAR BUTTON ICON
-#sidebar .sidebar-button-icon {
-  display: block;
-  padding: 20px;
-  transition: all 0.3s;
-}
-
-#sidebar.expanded .sidebar-button-icon {
-  transition: all 0.3s;
-}
-
-// SIDEBAR BUTTON TEXT
-#sidebar .sidebar-button-text {
-  display: none;
-  transition: all 0.3s;
-}
-
-#sidebar.expanded .sidebar-button-text {
-  display: block;
-  text-align: left;
-  font-size: 1.0em;
-  font-style: normal;
-  transition: all 0.3s;
-}
 
 /* ---------------------------------------------------
   CONTENT STYLE
@@ -232,63 +121,3 @@
 .overflow-hidden {
   overflow: hidden;
 }
-
-/* ---------------------------------------------------
-  MEDIAQUERIES
------------------------------------------------------ */
-@media (max-width: 768px) {
-  #sidebar {
-      min-width: 80px;
-      max-width: 80px;
-      text-align: center;
-      margin-left: -80px !important ;
-  }
-  a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
-      top: auto;
-      bottom: 5px;
-      right: 50%;
-      -webkit-transform: translateX(50%);
-      -ms-transform: translateX(50%);
-      transform: translateX(50%);
-  }
-  #sidebar.expanded {
-      margin-left: 0 !important;
-  }
-
-  #sidebar .sidebar-header h3, #sidebar .CTAs {
-      display: none;
-  }
-
-  #sidebar .sidebar-header strong {
-      display: block;
-  }
-
-  #sidebar ul li a {
-      padding: 20px 10px;
-  }
-
-  #sidebar ul li a span {
-      font-size: 0.85em;
-  }
-  #sidebar ul li a i {
-      margin-right:  0;
-      display: block;
-  }
-
-  #sidebar ul ul a {
-      padding: 10px !important;
-  }
-
-  #sidebar ul li a i {
-      font-size: 1.3em;
-  }
-  #sidebar {
-      margin-left: 0;
-  }
-  #sidebar-collapse span {
-      display: none;
-  }
-}
-
-
-
