Centered sidebar button contents

--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <a class="btn waves-effect waves-light tooltipped" id="sidebar-collapse" data-position="right" data-tooltip="Toggle side bar">
           <i class="btn-content-row row">
             <i class="material-icons left">menu</i>
-            <i class="btn-text left-align valign-wrapper row">Toggle sidebar</i>
+            <i class="btn-text left-align valign-wrapper">Toggle sidebar</i>
           </i>
         </a>
       </li>
