--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -9,23 +9,13 @@
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
-// WRAPPER
-.wrapper {
-  display: flex;
-  align-items: stretch;
-}
-
 // SIDEBAR
 #sidebar {
   min-width: 64px;
   max-width: 64px;
-  color: #fff;
   background: #2196F3;
   transition: all 0.3s;
-  // overflow: hidden;
-  transition: all 0.3s;
 }
-
 #sidebar.expanded {
   min-width: 250px;
   max-width: 250px;
@@ -33,19 +23,15 @@
 
 // SIDEBAR BUTTON
 #sidebar .btn {
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  margin-left: 0px;
+  margin: 0px;
+  padding: 0px;
   min-height: 64px;
   max-height: 64px;
   min-width: 64px;
   max-width: 64px;
+  border-radius: 0px !important;
   transition: all 0.3s;
-
 }
-
 #sidebar.expanded .btn {
   min-width: 250px;
   max-width: 250px;
@@ -60,9 +46,12 @@
 
 // SIDEBAR BUTTON ICON
 .material-icons {
+  line-height: 64px;
   min-height: 64px;
   max-height: 64px;
-  line-height: 64px;
+  min-width: 64px;
+  max-width: 64px;
+  margin: 0px;
 }
 
 // SIDEBAR BUTTON TEXT
@@ -73,6 +62,7 @@
   overflow: hidden;
   min-height: 64px;
   max-height: 64px;
+  line-height: 64px;
   opacity: 0;
   font-style: normal;
   transition: all 0.5s;
@@ -81,6 +71,13 @@
 #sidebar.expanded .btn-text {
   visibility: visible;
   opacity: 1;
+}
+
+.expanded {
+  min-height: 64px;
+  max-height: 64px;
+  max-width: 250px;
+  min-width: 250px;
 }
 
 /* ---------------------------------------------------
