--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,91 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav>
+  <div class="nav-wrapper">
+    <a class="brand-logo"><i class="material-icons">cloud</i>STREAMER DASHBOARD</a>
+    <ul class="hide-on-med-and-down right">
+      <li id="nav-search-bar">
+        <input class="nav-search" id="search-field" type="search" placeholder="Search" required>
+      </li>
+      <li><a id="toggle-search"><i class="material-icons">search</i></a></li>
+      <li><a><i class="material-icons">view_module</i></a></li>
+      <li><a><i class="material-icons">account_circle</i></a></li>
+      <li><a><i class="material-icons">more_vert</i></a></li>
+    </ul>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+<!-- <nav>
+  <div class="nav-wrapper">
+    <ul class="left">
+      <li><a class="brand-logo"><i class="material-icons">cloud</i>Streamer Dashboard</a></li>
+      <li>
+        <nav>
+          <div class="nav-wrapper">
+            <form>
+              <div class="input-field">
+                <input id="search" type="search" required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+              </div>
+            </form>
+          </div>
+        </nav>
+      </li>
+    </ul>
+    <ul class="right hide-on-med-and-down">
+      <li>
+        <a>
+          <i class="material-icons">search</i>
+        </a>
+      </li>
+      <li>
+        <a>
+          <i class="material-icons">view_module</i>
+        </a>
+      </li>
+      <li>
+        <a>
+        <i class="material-icons">refresh</i>
+      </a>
+      </li>
+      <li>
+        <a>
+          <i class="material-icons">more_vert</i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav> -->
+
+
+
+
+
+
+
+
+
+
+
+<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="navbar-brand">Streamer Dashboard</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
             </li> -->
-        </ul>
-    </div>
+        <!-- </ul>
+    </div> -->
     <!-- <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
@@ -27,6 +102,6 @@
             </li>
         </ul>
     </div> -->
-  </nav>
+  <!-- </nav> -->
 
 
