Fixed materialize js dependancy

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,3 +1,38 @@
+<div class="card">
+  <div class="card-content grey darken-3">
+    <p class="white-text">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+  </div>
+  <div class="card-tabs">
+    <ul class="tabs tabs-fixed-width grey darken-1">
+      <li class="tab"><a href="#test4" class="white-text">Test 1</a></li>
+      <li class="tab"><a class="active" href="#test5" class="white-text">Test 2</a></li>
+      <li class="tab"><a href="#test6" class="white-text">Test 3</a></li>
+    </ul>
+  </div>
+  <div class="card-content grey lighten-5">
+    <div id="test4">Test 1</div>
+    <div id="test5">Test 2</div>
+    <div id="test6">Test 3</div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
         <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
 
